[tool.poetry]
name = "scbs"
version = "0.1.5"
description = "command line utility to work with single cell methylation data"
authors = ["Lukas PM Kremer <L-Kremer@web.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
click = "^7.1.2"
numpy = "^1.20.1"
scipy = "^1.6.1"
pandas = "^1.2.3"
statsmodels = "^0.12.2"
click-help-colors = "^0.9"
numba = "^0.53.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scbs = "scbs.cli:cli"
