[tool.poetry]
name = "scbs"
version = "0.6.1"
description = "command line tool for the analysis of single-cell bisulfite-sequencing data"
authors = [
    "Lukas PM Kremer <L-Kremer@web.de>",
    "Leonie Küchenhoff <leonie.kuechenhoff@gmx.de>",
    "Alexey Uvarovskii <a.uvarovskii@uni-heidelberg.de>",
    "Simon Anders <simon.anders@bioquant.uni-heidelberg.de>",
]
maintainers = ["Lukas PM Kremer <L-Kremer@web.de>"]
readme = "README.md"
repository = "https://github.com/LKremer/scbs"
homepage = "https://github.com/LKremer/scbs"
keywords = ["biology", "bioinformatics", "single cell", "methylation", "single cell bisulfite sequencing"]
license = "GPL-3.0-or-later"
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = ">=7.1.2,<8.1"
numpy = ">=1.20.1,<2"
scipy = ">=1.6.1,<2"
pandas = ">=1.2.3,<2"
statsmodels = ">=0.12.2,<1"
click-help-colors = ">=0.9,<1"
numba = ">=0.53.0,<1"
colorama = ">=0.3.9,<1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^20.8b1"
flake8-print = "^4.0.0"
flake8-builtins = "^1.5.3"
pre-commit = "^2.17.0"
ruff = "^0.0.256"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scbs = "scbs.cli:cli"

[tool.isort]
profile = "black"
